--- a/index.html
+++ b/index.html
@@ -1,50 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Masseur Spa</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Masseur Spa</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
-  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="FB.jpg" class="d-block w-100" alt="...">
-      </div>
-     
-    </div>
-    <carousel id="carousel-fade" style="text-shadow: 0px 0px 2px #000"  img-width="1024"
-            img-height="480">
-            <carousel-slide caption="" img-src="FB.jpg"></carousel-slide>
-            
-        </carousel>
-    <div style="height: 20px;"></div>
-    <div class="container">
-      <div class="mt4"></div>
-      <div class="row"><div class="col-md-3"></div>
-        <div class="col-md-3">
+
+  <img src="img/FB.jpg" width="100%">
+
+
+
+  </div>
+  <div style="height: 20px;"></div>
+  <div class="container">
+    <div class="mt4"></div>
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-3 ">
+        <div >
           <a class="link-secondary" href="https://line.me/R/ti/p/@359fhjop">
-            <h3>Line</h3>
+            <img src="img/line.png" width="100px">
           </a>
+        </div>
+        <div class="mt-2">
           <a class="link-secondary" href="https://www.facebook.com/TheMasseurSpa">
-            <h3>Facebook</h3>
+            <img src="img/facebook.png" width="100px">
           </a>
-          <a class="link-secondary" href="093-479-3936">
-            <h3>Call</h3>
+        </div>
+        <div class="mt-2">
+          <a class="link-secondary" href="">
+            <img src="img/ig.png" width="100px">
           </a>
+        </div>
+        <div class="mt-2">
           <a class="link-secondary" href="https://twitter.com/themasseurspa">
-            <h3>Twitter</h3>
+            <img src="img/twitter.png" width="100px">
           </a>
         </div>
-        <div class="col-md-6" align="center">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d124022.49238701932!2d100.44733109794593!3d13.7364295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29f3d061912b1%3A0xdd2b4268d0b7aab9!2sThe%20masseur%20spa!5e0!3m2!1sth!2sth!4v1685699195444!5m2!1sth!2sth"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <div class="mt-2">
+          <a class="link-secondary" href="tel:+6693-479-3936">
+            <h3>Call: 093-479-3936</h3>
+          </a>
         </div>
-      </div>>
+      </div>
+
+      <div class="col-md-6" align="center">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d124022.49238701932!2d100.44733109794593!3d13.7364295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29f3d061912b1%3A0xdd2b4268d0b7aab9!2sThe%20masseur%20spa!5e0!3m2!1sth!2sth!4v1685699195444!5m2!1sth!2sth"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
