--- a/index.html
+++ b/index.html
@@ -7,49 +7,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Masseur Spa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
+
 </head>
 
 <body>
 
   <img src="img/FB.jpg" width="100%">
 
-
-
   </div>
   <div style="height: 20px;"></div>
   <div class="container">
     <div class="mt4"></div>
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-3 ">
-        <div >
+      <div class="col-md-2"></div>
+      <div class="col-md-3 " align="center">
+        <div>
+          <H2>Contact</H2>
+        </div>
+        <div class="mt-4"></div>
+        <div>
           <a class="link-secondary" href="https://line.me/R/ti/p/@359fhjop">
-            <img src="img/line.png" width="100px">
+            <img class="icon-contact" hspace="30" src="img/line.png" width="95px">
           </a>
-        </div>
-        <div class="mt-2">
+
           <a class="link-secondary" href="https://www.facebook.com/TheMasseurSpa">
-            <img src="img/facebook.png" width="100px">
+            <img class="icon-contact" src="img/facebook.png" width="100px">
           </a>
         </div>
+    
         <div class="mt-2">
           <a class="link-secondary" href="">
-            <img src="img/ig.png" width="100px">
+            <img class="icon-contact" hspace="30" src="img/ig.png" width="95px">
           </a>
-        </div>
-        <div class="mt-2">
           <a class="link-secondary" href="https://twitter.com/themasseurspa">
-            <img src="img/twitter.png" width="100px">
+            <img class="icon-contact" src="img/twitter.png" width="100px">
           </a>
         </div>
-
-        <div class="mt-2">
+   
+        
+        <div class="mt-4">
           <a class="link-secondary" href="tel:+6693-479-3936">
             <h3>Call: 093-479-3936</h3>
           </a>
         </div>
       </div>
-
+      <div class="col-md-1"></div>
       <div class="col-md-6" align="center">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d124022.49238701932!2d100.44733109794593!3d13.7364295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29f3d061912b1%3A0xdd2b4268d0b7aab9!2sThe%20masseur%20spa!5e0!3m2!1sth!2sth!4v1685699195444!5m2!1sth!2sth"
