--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
 
 </head>
 
-<body>
+<body class="background-color">
 
   <img src="img/FB.jpg" width="100%">
 
-  </div>
-  <div style="height: 20px;"></div>
-  <div class="container">
-    <div class="mt4"></div>
+
+
+  <div class="mt-4"></div>
+  <div class="container " >
+    <div>
+      <img src="img/Promotion/MENU BIG SIZE.jpg" width="100%" height="auto">
+    </div>
+    <div class="mt-4" style="height: 20px;"></div>
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-3 " align="center">
         <div>
-          <H2>Contact</H2>
+          <H1 class="font-white">Contact</H1>
         </div>
         <div class="mt-4"></div>
         <div>
@@ -35,7 +39,7 @@
             <img class="icon-contact" src="img/facebook.png" width="100px">
           </a>
         </div>
-    
+
         <div class="mt-2">
           <a class="link-secondary" href="">
             <img class="icon-contact" hspace="30" src="img/ig.png" width="95px">
@@ -44,11 +48,11 @@
             <img class="icon-contact" src="img/twitter.png" width="100px">
           </a>
         </div>
-   
-        
+
+
         <div class="mt-4">
           <a class="link-secondary" href="tel:+6693-479-3936">
-            <h3>Call: 093-479-3936</h3>
+            <h5 class="font-white">Call: 093-479-3936</h5>
           </a>
         </div>
       </div>
