--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="rRB7JOR3Qy3B_VWbSvZ6HGDroVmvmp7DgmwANq0-W20" />
+  <meta name="keywords" content="นัดนวดชาย,นัดนวด,นวดสบาย,นวดดี,สปาสำหรับผู้ชาย,นวดสุขุมวิท,นวดเกย์,นวดLGBT,หมอนวดชาย,หมอนวด,นวดนานา,The masseur spa,masseur,spa,the masseur"/>
   <title>The Masseur Spa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
