--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="rRB7JOR3Qy3B_VWbSvZ6HGDroVmvmp7DgmwANq0-W20" />
+  <meta name="description" content="นวดสำหรับท่านชาย">
   <meta name="keywords" content="นัดนวดชาย,นัดนวด,นวดสบาย,นวดดี,สปาสำหรับผู้ชาย,นวดสุขุมวิท,นวดเกย์,นวดLGBT,หมอนวดชาย,หมอนวด,นวดนานา,The masseur spa,masseur,spa,the masseur"/>
   <title>The Masseur Spa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -34,11 +35,11 @@
         <div class="mt-4"></div>
         <div>
           <a class="link-secondary" href="https://line.me/R/ti/p/@359fhjop">
-            <img class="icon-contact" hspace="30" src="img/line.png" width="95px">
+            <img class="icon-contact" hspace="30" src="img/line.png" width="95px" alt="หมอนวดชาย">
           </a>
 
           <a class="link-secondary" href="https://www.facebook.com/TheMasseurSpa">
-            <img class="icon-contact" src="img/facebook.png" width="100px">
+            <img class="icon-contact" src="img/facebook.png" width="100px" alt="นวดท่านชาย">
           </a>
         </div>
 
@@ -47,7 +48,7 @@
             <img class="icon-contact" hspace="30" src="img/ig.png" width="95px">
           </a>
           <a class="link-secondary" href="https://twitter.com/themasseurspa">
-            <img class="icon-contact" src="img/twitter.png" width="100px">
+            <img class="icon-contact" src="img/twitter.png" width="100px" alt="นวดเกย์">
           </a>
         </div>
 
